Fix name to André, remove Geocities button, update year to 1992

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=800">
-  <title>~~*~~ Andre Hamon's HOMEPAGE!!!! ~~*~~</title>
+  <title>~~*~~ André Hamon's HOMEPAGE!!!! ~~*~~</title>
   <style>
     /* ============================================
        WELCOME TO MY SUPER COOL WEBPAGE!!!
@@ -347,7 +347,7 @@
     <span class="star7">✦</span>
   </div>
 
-  <div class="site-title">ANDRE HAMON</div>
+  <div class="site-title">ANDR&#201; HAMON</div>
   <div class="under-name">~*~ official homepage ~*~</div>
 
   <div class="gif-row" style="margin-top:10px;">
@@ -398,9 +398,6 @@
       <a href="mailto:hello@andrehamon.me" class="web-btn btn-email">
         📧<br>E-MAIL ME!
       </a>
-      <a href="http://www.geocities.com" target="_blank" class="web-btn btn-geocities">
-        🏠<br>GEOCITIES
-      </a>
     </div>
   </div>
 
@@ -411,7 +408,7 @@
     <div class="counter-label">YOU ARE VISITOR NUMBER:</div>
     <div class="counter-digits">001,337</div>
     <div style="font-size:9px; color: #446644; margin-top:3px; font-family: 'Courier New', monospace;">
-      since jan 1, 1996
+      since oct, 1992
     </div>
   </div>
 
@@ -439,7 +436,7 @@
 <!-- FOOTER -->
 <div class="footer">
   <div>
-    &copy; 1996&ndash;2026 Andre Hamon &bull; All Rights Reserved &bull;
+    &copy; 1992&ndash;2026 André Hamon &bull; All Rights Reserved &bull;
     <a href="#">Privacy Policy</a> &bull;
     <a href="#">Disclaimer</a>
   </div>
