--- a/index.html
+++ b/index.html
@@ -50,6 +50,40 @@
       to   { opacity: 1; }
     }
 
+    /* ---- WIN95 SCROLLBAR ---- */
+    ::-webkit-scrollbar { width: 16px; }
+    ::-webkit-scrollbar-track {
+      background: #c0c0c0;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #c0c0c0;
+      border-top:    2px solid #ffffff;
+      border-left:   2px solid #ffffff;
+      border-right:  2px solid #808080;
+      border-bottom: 2px solid #808080;
+    }
+    ::-webkit-scrollbar-button {
+      display: block;
+      background-color: #c0c0c0;
+      border-top:    2px solid #ffffff;
+      border-left:   2px solid #ffffff;
+      border-right:  2px solid #808080;
+      border-bottom: 2px solid #808080;
+      width: 16px;
+      height: 16px;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+    ::-webkit-scrollbar-button:vertical:decrement {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpolygon points='4,1 7,6 1,6' fill='%23000000'/%3E%3C/svg%3E");
+    }
+    ::-webkit-scrollbar-button:vertical:increment {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpolygon points='4,7 7,2 1,2' fill='%23000000'/%3E%3C/svg%3E");
+    }
+    ::-webkit-scrollbar-button:vertical:increment:start,
+    ::-webkit-scrollbar-button:vertical:decrement:end { display: none; }
+    ::-webkit-scrollbar-corner { background: #c0c0c0; }
+
     * { margin: 0; padding: 0; }
 
     body {
@@ -369,9 +403,9 @@
 <!-- MAIN CONTENT -->
 <div class="main-box">
 
-  <span class="spinning-star">⭐</span>
-  <span class="spinning-star" style="animation-direction: reverse; font-size: 24px; margin: 0 16px;">🌀</span>
-  <span class="spinning-star">⭐</span>
+  <img src="images/star.gif" style="width:36px; height:36px;">
+  <img src="images/star.gif" style="width:36px; height:36px; margin: 0 16px;">
+  <img src="images/star.gif" style="width:36px; height:36px;">
 
   <br><br>
 
