--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     /* ---- HEADER ---- */
     .header-wrapper {
       margin: 12px 8px;
-      background: #000000;
+      background: rgba(0,0,0,0.7);
       border: 4px ridge #ff00ff;
       padding: 16px 8px;
       box-shadow: inset 0 0 20px #330033;
