--- a/photos.html
+++ b/photos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=800">
-  <title>André Hamon's Web Site</title>
+  <title>André Hamon's Web Site - Photo Album</title>
   <style>
     body {
       background-color: #E8E8D2;
@@ -15,14 +15,9 @@
       color: #000000;
       margin: 10px 16px;
     }
-
     a            { color: #0000cc; }
     a:visited    { color: #551a8b; }
-
-    /* ---- CONTAINER ---- */
     .container { width: 650px; }
-
-    /* ---- HEADER ---- */
     .header-box {
       border: 2px solid #000000;
       background: #ffffff;
@@ -39,8 +34,6 @@
       font-family: "Times New Roman", serif;
       letter-spacing: 0.5px;
     }
-
-    /* Purple bar under header */
     .header-bar {
       background: #7a006e;
       height: 9px;
@@ -56,8 +49,6 @@
       font-size: 7px;
       letter-spacing: 8px;
     }
-
-    /* ---- DECORATIVE HR ---- */
     .deco-hr-wrap {
       position: relative;
       margin: 18px 10px 18px 10px;
@@ -84,15 +75,13 @@
     }
     .deco-hr-circle.left  { left:  0; }
     .deco-hr-circle.right { right: 0; }
-
-    /* ---- SIDEBAR ---- */
     .sidebar {
       width: 95px;
       vertical-align: top;
       padding-top: 4px;
       text-align: center;
     }
-.nav-btn {
+    .nav-btn {
       display: block;
       position: relative;
       width: 140px;
@@ -112,7 +101,7 @@
       border-left-color: #666695;
       border-color: #666695;
     }
-    .nav-btn::before{
+    .nav-btn::before {
       content: '';
       position: absolute;
       left: -10px;
@@ -120,28 +109,13 @@
       height: 6px;
       border-radius: 50%;
       background: #FFFFFF;
+      top: calc(50% - 3px);
     }
-    .nav-btn::before { top: calc(50% - 3px); }
-
-    /* ---- CONTENT ---- */
     .content-cell {
-      vertical-align: top;
-      padding: 4px 10px 10px 10px;
+      vertical-align: middle;
+      text-align: center;
+      padding: 40px 10px;
     }
-    .content-text {
-      vertical-align: top;
-      padding-left: 20px;
-      line-height: 1.55;
-      font-size: 16px;
-    }
-    .person-img {
-      vertical-align: top;
-    }
-    .person-img img {
-      display: block;
-    }
-
-    /* ---- FOOTER ---- */
     .footer-hr {
       border: none;
       border-top: 2px solid #000000;
@@ -158,9 +132,8 @@
 <body>
 <div class="container">
 
-  <!-- HEADER -->
   <div class="header-box">
-    <div class="header-title">André Hamon's Web Site</div>
+    <div class="header-title">Photo Album</div>
   </div>
   <div class="header-bar">
     <span class="header-bar-dots">• •</span>
@@ -168,18 +141,14 @@
 
   <br>
 
-  <!-- DECORATIVE HR -->
   <div class="deco-hr-wrap">
     <div class="deco-hr-line"></div>
     <div class="deco-hr-circle left"></div>
     <div class="deco-hr-circle right"></div>
   </div>
 
-  <!-- MAIN TABLE -->
   <table width="100%" cellpadding="0" cellspacing="0" border="0">
     <tr>
-
-      <!-- LEFT SIDEBAR -->
       <td class="sidebar">
         <a href="me.html" class="nav-btn">Home</a>
         <a href="about.html" class="nav-btn">About Me</a>
@@ -189,29 +158,12 @@
         <a href="music.html" class="nav-btn">Music</a>
         <a href="photos.html" class="nav-btn">Photo Album</a>
       </td>
-
-      <!-- CONTENT -->
       <td class="content-cell">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tr>
-            <td class="person-img">
-              <img src="images/me.gif" alt="André Hamon" height="381" width="258">
-            </td>
-            <td class="content-text">
-              <p>Hello,</p>
-              <p>This website tells a bit about me and my life.&nbsp; Hope you enjoy it.&nbsp; Feel free and e-mail if should you find some items of interest.</p>
-              <p>Sincerely,</p>
-              <img src="images/signature.png" width="200px" alt="Signature">
-              <p>- <a href="mailto:hello@andrehamon.me">André Hamon</a></p>
-            </td>
-          </tr>
-        </table>
+        <img src="images/under_construction.gif" alt="Under Construction">
       </td>
-
     </tr>
   </table>
 
-  <!-- FOOTER -->
   <hr class="footer-hr">
   <p class="footer-text">End of Page</p>
 
